@@ -1,5 +1,5 @@
 QPKG_NAME="RunLast"
-QPKG_VER="250707"
+QPKG_VER="250711"
 QPKG_AUTHOR="OneCD"
 QPKG_RC_NUM="999"
 QPKG_SERVICE_PROGRAM="runlast.sh"
